src/test/ui/derives/derives-span-Hash-struct.stderr
error[E0277]: the trait bound `Error: Hash` is not satisfied
  --> $DIR/derives-span-Hash-struct.rs:8:5
   |
LL | #[derive(Hash)]
   |          ---- in this derive macro expansion
LL | struct Struct {
LL |     x: Error
   |     ^^^^^^^^ the trait `Hash` is not implemented for `Error`
   |
note: required by a bound in `std::hash::Hash::hash`
  --> $SRC_DIR/core/src/hash/mod.rs:LL:COL
   |
LL |     fn hash<H: Hasher>(&self, state: &mut H);
   |             ^ required by this bound in `std::hash::Hash::hash`
   = note: this error originates in the derive macro `Hash` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
